--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 <body>
     <header class="header">
         <ul class="nav">
-            <a href="index.html">Kodu</a>
-            <a href="second.html">Teine leht</a>
+            <li><a href="index.html">Kodu</a></li>
+            <li><a href="second.html">Teine leht</a></li>
         </ul>
     </header>
 
 <h1>Worlds 2023</h1>
 <p>See leht käsitleb League of Legendsi maailmameistrivõistlust ehk üritust Worlds 2023.</p>
 <br />
-<a href="https://lolesports.com/" target="_blank">Ametlik lehekülg</a></br>
-<img src="res/images/gods.jpg" alt="gods" width = 50% height = auto>
+<a href="https://lolesports.com/" target="_blank">Ametlik lehekülg</a><br>
+<img src="res/images/gods.jpg" alt="gods" >
 
 <h2>Võistlusele jõudnud regioonid:</h2>
 <ul>
