--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="style.css">
 <title>Worlds 2023
 </title>
 </head>
@@ -11,13 +14,13 @@
         </ul>
     </header>
 
-<h1>Worlds 2023</h1>
-<p>See leht käsitleb League of Legendsi maailmameistrivõistlust ehk üritust Worlds 2023.</p>
+<h1 class="pealkiri">Worlds 2023</h1>
+<p class="tekst">See leht käsitleb League of Legendsi maailmameistrivõistlust ehk üritust Worlds 2023.</p>
 <br />
 <a href="https://lolesports.com/" target="_blank">Ametlik lehekülg</a><br>
 <img src="res/images/gods.jpg" alt="gods" >
 
-<h2>Võistlusele jõudnud regioonid:</h2>
+<h2 class="tekst">Võistlusele jõudnud regioonid:</h2>
 <ul>
     <li>LCK (Lõuna-Korea)</li>
     <li>LPL (Hiina)</li>
