worked on index.html and css.

--- a/index.html
+++ b/index.html
@@ -14,60 +14,63 @@
         </ul>
     </header>
 
-<h1 class="pealkiri">Worlds 2023</h1>
-<p class="tekst">See leht käsitleb League of Legendsi maailmameistrivõistlust ehk üritust Worlds 2023.</p>
-<br />
-<a href="https://lolesports.com/" target="_blank">Ametlik lehekülg</a><br>
-<img src="res/images/gods.jpg" alt="gods" >
+<div style="align-items: center; text-align: center; float:left; width:60%">
+    <h1 class="pealkiri">Worlds 2023</h1>
+    <h2 class="tutvustus">See leht käsitleb League of Legendsi maailmameistrivõistlust ehk üritust Worlds 2023.</p>
+    <br />
+    <a href="https://lolesports.com/" target="_blank">Ametlik lehekülg</a><br>
+    <img class="pilt" src="res/images/gods.jpg" alt="gods" >
+</div>
 
-<h2 class="tekst">Võistlusele jõudnud regioonid:</h2>
-<ul>
-    <li>LCK (Lõuna-Korea)</li>
-    <li>LPL (Hiina)</li>
-    <li>LEC (Euroopa)</li>
-    <li>LCS (Põhja-Ameerika)</li>
-    <li>VCS (Vietnam)</li>
-</ul>
-<table>
-    <thead>
-      <tr>
-       <th>Regioon</th>
-       <th colspan="4">Tiimid</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-       <td>LCK</td>
-       <td>GEN.G Esports</td>
-       <td>KT Rolster</td>
-       <td>T1</td>
-       <td>Dplus</td>
-      </tr>
-      <tr>
-       <td>LPL</td>
-       <td>JD Gaming</td>
-       <td>Bilibili Gaming</td>
-       <td>LNG Esports</td>
-       <td>Weibo Gaming</td>
-      </tr>
-      <tr>
-        <td>LEC</td>
-        <td>G2 Esports</td>
-        <td>Fnatic</td>
-        <td>MAD Lions</td>
-        <td>Team BDS</td>
-       </tr>
-       <tr>
-        <td>LCS</td>
-        <td>NRG</td>
-        <td>Cloud9</td>
-        <td>Team Liquid</td>
-       </tr>
-       <tr>
-        <td>VCS</td>
-        <td>GAM Esports</td>
-       </tr>
-    </tbody>
-   </table>
-
+<div style="float:right; width:40%;">
+    <h2 class="tekst">Võistlusele jõudnud regioonid:</h2>
+    <ul style="float:left">
+        <li class="tekst">LCK (Lõuna-Korea)</li>
+        <li class="tekst">LPL (Hiina)</li>
+        <li class="tekst">LEC (Euroopa)</li>
+        <li class="tekst">LCS (Põhja-Ameerika)</li>
+        <li class="tekst">VCS (Vietnam)</li>
+    </ul>
+    <table style="float:right; margin-right:40%">
+        <thead>
+        <tr>
+        <th>Regioon</th>
+        <th colspan="4">Tiimid</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+        <td>LCK</td>
+        <td>GEN.G Esports</td>
+        <td>KT Rolster</td>
+        <td>T1</td>
+        <td>Dplus</td>
+        </tr>
+        <tr>
+        <td>LPL</td>
+        <td>JD Gaming</td>
+        <td>Bilibili Gaming</td>
+        <td>LNG Esports</td>
+        <td>Weibo Gaming</td>
+        </tr>
+        <tr>
+            <td>LEC</td>
+            <td>G2 Esports</td>
+            <td>Fnatic</td>
+            <td>MAD Lions</td>
+            <td>Team BDS</td>
+        </tr>
+        <tr>
+            <td>LCS</td>
+            <td>NRG</td>
+            <td>Cloud9</td>
+            <td>Team Liquid</td>
+        </tr>
+        <tr>
+            <td>VCS</td>
+            <td>GAM Esports</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body></html>
